# tauri-example

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  icon.html  index.html  package-lock.json  package.json  tailwind.config.js  test-jwt-server.js  vite.config.ts
.serena/: project.yml
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/libs/: VideoSDK.dylib  libVideoSDK.dylib  libcares.dylib  libjson.dylib  liblooper.dylib  libminizip.dylib  libssl.dylib  libzContext.dylib  libzoombase_crypto_shared.dylib
src-tauri/libs/CptHost.app/Contents/: Info.plist
src-tauri/libs/ZMVideoSDK.framework/Headers/: ZMVideoSDKDef.h  ZMVideoSDKLiveStreamHelper.h  ZMVideoSDKShareSettingHelper.h  ZMVideoSDKUserHelper.h
src-tauri/libs/ZMVideoSDK.framework/Resources/: Info.plist
src-tauri/libs/ZoomTelemetry.bundle/Contents/: Info.plist
src-tauri/libs/annoter.bundle/Contents/: Info.plist
src-tauri/libs/aomagent.bundle/Contents/: Info.plist
src-tauri/libs/aomhost.app/Contents/: Info.plist
src-tauri/libs/capHost.app/Contents/: Info.plist
src-tauri/libs/cmmbiz.framework/: cmmbiz
src-tauri/libs/cmmlib.framework/: cmmlib
src-tauri/libs/curl64.framework/: curl64
src-tauri/libs/mcm.bundle/Contents/: Info.plist
src-tauri/libs/ssb_sdk.bundle/Contents/: Info.plist
src-tauri/libs/viperex.bundle/Contents/: Info.plist
src-tauri/libs/xmpp_framework.framework/: xmpp_framework
src-tauri/libs/zData.bundle/Contents/: Info.plist
src-tauri/libs/zNet.bundle/Contents/: Info.plist
src-tauri/src/: main.rs  zoom_sdk.rs
(+92 files in other folders)
