[package]
name = "webrtc-client"
version = "0.1.0"
description = "A WebRTC client application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "webrtc-client"
path = "src-tauri/src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"