[package]
name = "tauri-example"
version = "0.1.0"
description = "A Tauri example application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "tauri-example"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [ "macos-private-api", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"
